Set up Vite + React + Tailwind v4, cleaned structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link href="/src/css/input.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
+  <h1 class="text-3xl font-bold underline bg-amber-500 text-white p-4 rounded-lg">
+    This is a Tailwind CSS example with Vite and PHP!<br>
     Hello world!
   </h1>
 </body>
