--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/src/css/input.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-amber-500 text-white p-4 rounded-lg">
-    This is a Tailwind CSS example with Vite and PHP!<br>
-    Hello world!
-  </h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Scarborough Shift</title>
+  </head>
+  <body class="bg-gray-100 text-gray-900">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
-
